--- a/UCR-final.Rmd
+++ b/UCR-final.Rmd
@@ -31,6 +31,7 @@ library(shipunov)
 library(StatMatch)
 library(rattle)
 library(modeest)
+library(pROC)
 ```
 
 # Base
@@ -199,11 +200,12 @@ table(test$admitido,mod_knn)
 # validacion cruzada
 
 ```{r}
+# --------------------------------------------------------------------------- validación cruzada
 cortes=createFolds(1:nrow(ucr),k=10) # con 10 cortes
 res2 = matrix(nrow = 10, ncol = 4)
 colnames(res2) = c("e","FP","FN","AUC")
 
-# validación parqa el modelo logistico:
+# ------------------------------------------------ modelo logistico:
 
 for(i in 1:10){
   train3 = ucr[-cortes[[i]],]
@@ -214,21 +216,19 @@ for(i in 1:10){
   res2[i,] = f5$indicadores
 }
 
-# para el arbol de:
+# ------------------------------------------------ para un arbol de desicion:
+# para el arbol (ajustar cp)
 res_cp = matrix(nrow = 10, ncol = 4)
 colnames(res_arb) = c("e","FP","FN","AUC")
 res_abr <- list()
-itera <- c(0.0001, 0.001, 0.01, 0.1, 1)
+itera <- seq(from = 0.00001, to = 0.05, length.out = 20)
 
 for (j in 1:length(itera)) {
   for(i in 1:10){
     train3 = ucr[-cortes[[i]],]
     test3 = ucr[cortes[[i]],]
-  
- 
     mod_arbol = rpart(admitido ~ ., method="class", data=train3,
-                  control = rpart.control(minsplit = 326,minbucket = 163,cp = itera[j], maxdepth = 7))
-  
+                  control = rpart.control(minsplit = 326,minbucket = 163,cp = itera[j]))
     pred1=predict(mod_arbol,newdata = test3, type = "class")
     f5=eval(test3$admitido, as.numeric(pred1))
     res_cp[i,] = f5$indicadores
@@ -237,8 +237,86 @@ for (j in 1:length(itera)) {
   res_abr[[j]] <- res_cp
 }
 
+medias_arb <- matrix(NA, nrow = length(itera), ncol = 4)
 
-res_abr
+
+for (i in 1:20) {
+    medias_arb[i,] <- apply(res_abr[[i]], 2, mean)
+  }
+
+
+rownames(medias_arb) <- round(itera,6)
+colnames(medias_arb) <- c("e","FP","FN","AUC")
+
+AUC_tot <-cbind(res_abr[[3]][,4],res_abr[[4]][,4],res_abr[[5]][,4])
+colnames(AUC_tot) <- c("cp: 0.005","cp: 0.0078","cp: 0.01")
+
+matplot(AUC_tot, type = "l", lty = 1, ylim = c(0.48,0.53), ylab = "AUC", xlab = "Repetición")
+legend("topright", colnames(AUC_tot), col = 1:3, lty = 1, bty = "n")
+medias=apply(AUC_tot, 2, mean)
+abline(h=medias, col=1:3,lty= 2)
+
+# para ajustar maxdepth:
+res_depth = matrix(nrow = 10, ncol = 4)
+colnames(res_depth) = c("e","FP","FN","AUC")
+res_abr2 <- list()
+itera <- seq(1,15)
+
+for (j in 1:length(itera)) {
+  for(i in 1:10){
+    train3 = ucr[-cortes[[i]],]
+    test3 = ucr[cortes[[i]],]
+  
+ 
+    mod_arbol = rpart(admitido ~ ., method="class", data=train3,
+                  control = rpart.control(minsplit = 326,minbucket = 163,cp = 0.005, maxdepth = itera[i]))
+  
+    pred1=predict(mod_arbol,newdata = test3, type = "class")
+    f5=eval(test3$admitido, as.numeric(pred1))
+    res_depth[i,] = f5$indicadores
+    
+  }
+  res_abr2[[j]] <- res_depth
+}
+
+
+medias_arb2 <- matrix(NA, nrow = length(itera), ncol = 4)
+for (i in 1:15) {
+  
+  medias_arb2[i,] <- apply(res_abr2[[i]], 2, mean)
+  
+}
+
+matplot(medias_arb2[,4], type = "l", lty = 1, ylim = c(0.48,0.53), ylab = "AUC", xlab = "Repetición")
+legend("topright", "AUC", col = 1:3, lty = 1, bty = "n")
+medias=apply(medias_arb2[,4], 2, mean)
+abline(h=medias, col=1:3,lty= 2)
+
+# utilizamos un arbol con 0.005 de cp y maxdepth de 7
+
+# -------------------------------------------------------------------- para el BAGGING
+
+res_bagg = matrix(nrow = 10, ncol = 4)
+colnames(res_bagg) = c("e","FP","FN","AUC")
+bagg <- list()
+mfinal <- seq(11,21, by = 2)
+
+for (j in 1:length(itera)) {
+  for(i in 1:10){
+    train3 = ucr[-cortes[[i]],]
+    test3 = ucr[cortes[[i]],]
+  
+    mod_bagg=bagging(admitido~., method="class", 
+                 control = rpart.control(minsplit = 326,minbucket = 163,cp = 0.005, maxdepth = 7),
+                 data = train3, mfinal = mfinal[j])
+    pred_bagg = predict(mod_bagg,test3)$class
+  
+    f5=eval(test3$admitido, as.numeric(factor(pred_bagg)))
+    res_bagg[i,] = f5$indicadores
+  }
+  bagg[[j]] <- res_bagg
+}
+
 ```
 
 
